--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,19 +34,19 @@ deploy_docker:
     paths:
       - dist
 
-# deploy_prod:
-#   stage: deploy_prod
-#   only:
-#     - develop
-#   except:
-#     - tags
-#   before_script:
-#     - which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )
-#     - eval $(ssh-agent -s)
-#     - echo "$SSH_PRIVATE_KEY" | ssh-add -
-#     - mkdir -p ~/.ssh
-#     - chmod 700 ~/.ssh
-#     - ssh-keyscan $PROD_HOST >> ~/.ssh/known_hosts
-#     - chmod 644 ~/.ssh/known_hosts
-#   script:
-#     - ssh $PROD_USER@$PROD_HOST "kubectl rollout restart -n $NAMESPACE deployment $DEPLOYMENT_NAME"
+deploy_prod:
+  stage: deploy_prod
+  only:
+    - develop
+  except:
+    - tags
+  before_script:
+    - which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | ssh-add -
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - ssh-keyscan $PROD_HOST >> ~/.ssh/known_hosts
+    - chmod 644 ~/.ssh/known_hosts
+  script:
+    - ssh $PROD_USER@$PROD_HOST "kubectl rollout restart -n $NAMESPACE deployment $DEPLOYMENT_NAME"
