publishDate moved from header to data

--- a/nginx-cors/nginx.conf
+++ b/nginx-cors/nginx.conf
@@ -1,4 +1,4 @@
-Denis Kholmogorov, [13.04.2022 20:11]
+# Denis Kholmogorov, [13.04.2022 20:11]
 map $http_upgrade $connection_upgrade {
     default upgrade;
     '' close;
@@ -35,6 +35,7 @@ server {
     location /api/ {
     # Адрес бэкенда. В случае локальной разработки, внешний адрес локального хоста
         proxy_pass http://84.201.189.234/;
+        # proxy_pass http://localhost:8080/;
         access_log /var/log/nginx/backend-access.log;
         error_log /var/log/nginx/backend-error.log;
     }
