comment likes & country-city in profile fixed

--- a/nginx-cors/nginx.conf
+++ b/nginx-cors/nginx.conf
@@ -7,6 +7,7 @@ upstream ws-backend {
     ip_hash;
     # Адрес Веб-Сокет сервера
     server 84.201.189.234;
+    # server localhost:8080;
 }
 
 server {
