--- a/nginx-cors/nginx.conf
+++ b/nginx-cors/nginx.conf
@@ -6,8 +6,8 @@ map $http_upgrade $connection_upgrade {
 upstream ws-backend {
     ip_hash;
     # Адрес Веб-Сокет сервера
-    server 84.201.189.234;
-    # server localhost:8080;
+    # server 84.201.189.234;
+    server localhost:8088;
 }
 
 server {
@@ -35,8 +35,8 @@ server {
 
     location /api/ {
     # Адрес бэкенда. В случае локальной разработки, внешний адрес локального хоста
-        proxy_pass http://84.201.189.234/;
-        # proxy_pass http://localhost:8080/;
+        # proxy_pass http://84.201.189.234/;
+        proxy_pass http://localhost:8080/;
         access_log /var/log/nginx/backend-access.log;
         error_log /var/log/nginx/backend-error.log;
     }
