Добавил 81 порт для локальной разработки  который смотрит на host.docker.internal
(cherry picked from commit 2a2b21e19618c414b8774a12c98824127070796a)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ image: node:16.13.1
 stages:
   - build
   - deploy_docker
+  - deploy_docker_local
   - deploy_prod
 
 build:
@@ -30,6 +31,22 @@ deploy_docker:
     - docker build -f Dockerfile-ci -t $BACK_IMAGE .
     - docker push $BACK_IMAGE
     - echo "Frontend deploy stage end"
+  artifacts:
+    paths:
+      - dist
+
+deploy_docker_local:
+  image: docker:19.03.12
+  stage: deploy_docker_local
+  only:
+    - develop
+  before_script:
+    - docker logout
+    - docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
+  script:
+    - docker build -f Dockerfile-ci-local -t $BACK_IMAGE_LOCAL .
+    - docker push $BACK_IMAGE_LOCAL
+    - echo "Frontend-local deploy stage end"
   artifacts:
     paths:
       - dist
