--- a/nginx-cors/nginx.conf
+++ b/nginx-cors/nginx.conf
@@ -35,8 +35,7 @@ server {
 
     location /api/ {
     # Адрес бэкенда. В случае локальной разработки, внешний адрес локального хоста
-        # proxy_pass http://84.201.189.234/;
-        proxy_pass http://localhost:8080/;
+        proxy_pass http://82.202.214.42/;
         access_log /var/log/nginx/backend-access.log;
         error_log /var/log/nginx/backend-error.log;
     }
