--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "axios": "^0.23.0",
+    "chart.js": "^4.2.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.4.2",
     "inputmask": "^5.0.6",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
@@ -25,6 +27,7 @@
     "tiptap-extensions": "^1.35.2",
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.11",
+    "vue-echarts": "^6.5.4",
     "vue-moment": "^4.1.0",
     "vue-native-websocket": "^2.0.15",
     "vue-router": "^3.2.0",
@@ -41,6 +44,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/composition-api": "^1.7.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
