--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "vue-moment": "^4.1.0",
     "vue-native-websocket": "^2.0.15",
     "vue-router": "^3.2.0",
+    "vue-select": "^3.20.2",
     "vue-simple-svg": "1.3.2",
     "vue-toastify": "^1.8.1",
     "vue-uuid": "^3.0.0",
     "vue-virtual-scroll-list": "^2.3.3",
+    "vue2-datepicker": "^3.11.1",
+    "vue2-editor": "^2.10.3",
     "vuelidate": "^0.7.6",
     "vuex": "^3.4.0"
   },
