--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tiptap": "^1.32.2",
     "tiptap-extensions": "^1.35.2",
     "v-tooltip": "^2.1.3",
+    "vibrant": "^0.0.1",
     "vue": "^2.6.11",
     "vue-echarts": "^6.5.4",
     "vue-moment": "^4.1.0",
