--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "inputmask": "^5.0.6",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "qrcode-generator": "^1.4.4",
     "socket.io-client": "^4.1.2",
     "tiptap": "^1.32.2",
     "tiptap-extensions": "^1.35.2",
+    "v-click-outside": "^3.2.0",
     "v-tooltip": "^2.1.3",
     "vibrant": "^0.0.1",
     "vue": "^2.6.11",
