--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "v-tooltip": "^2.1.3",
     "vibrant": "^0.0.1",
     "vue": "^2.6.11",
+    "vue-chat-scroll": "^1.4.0",
     "vue-echarts": "^6.5.4",
     "vue-emoji-picker": "^1.0.3",
     "vue-moment": "^4.1.0",
